# gde2-desktop

./: AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  gde2-version.xml.in.in
.tx/: config
docs/reference/: Makefile.am
docs/reference/gde2-desktop/: Makefile  Makefile.am  gde2-desktop-docs.sgml  gde2-desktop-sections.txt  gde2-desktop.types
gde2-about/: Makefile.am  gde2-about.c  gde2-about.desktop.in.in  gde2-about.h
icons/: Makefile.am
libgde2-desktop/: Makefile.am  display-name.c  edid.h  gde2-aboutdialog.c  gde2-aboutdialog.h  gde2-bg-crossfade.c  gde2-bg-crossfade.h  gde2-bg.c  gde2-bg.h  gde2-colorbutton.c  gde2-colorbutton.h  gde2-colorsel.c  gde2-colorsel.h  gde2-colorseldialog.c  gde2-colorseldialog.h  gde2-dconf.c  gde2-dconf.h  gde2-desktop-2.0-uninstalled.pc.in  gde2-desktop-2.0.pc.in  gde2-desktop-item.c  gde2-desktop-item.h  gde2-desktop-thumbnail.c  gde2-desktop-thumbnail.h  gde2-desktop-utils.c  gde2-desktop-utils.h  gde2-desktop.h  gde2-gsettings.c  gde2-gsettings.h  gde2-rr-config.c  gde2-rr-config.h  gde2-rr-labeler.c  gde2-rr-labeler.h  gde2-rr-output-info.c  gde2-rr-private.h  gde2-rr.c  gde2-rr.h  gde2-thumbnail-pixbuf-utils.c  pnp.ids  private.h  test-ditem.c  (+1 more)
man/: Makefile.am  gde2-about.1  gde2-color-select.1  mpaste.1
po/: POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  az.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  de_CH.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_CL.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  frp.po  fur.po  (+75 more)
schemas/: Makefile.am  org.gde2.accessibility-keyboard.gschema.xml.in  org.gde2.accessibility-startup.gschema.xml.in  org.gde2.applications-at-mobility.gschema.xml.in  org.gde2.applications-at-visual.gschema.xml.in  org.gde2.applications-browser.gschema.xml.in  org.gde2.applications-office.gschema.xml.in  org.gde2.applications-terminal.gschema.xml.in  org.gde2.background.gschema.xml.in  org.gde2.debug.gschema.xml.in  org.gde2.file-views.gschema.xml.in  org.gde2.interface.gschema.xml.in  org.gde2.lockdown.gschema.xml.in  org.gde2.peripherals-keyboard.gschema.xml.in  org.gde2.peripherals-mouse.gschema.xml.in  org.gde2.sound.gschema.xml.in  org.gde2.thumbnail-cache.gschema.xml.in  org.gde2.thumbnailers.gschema.xml.in  org.gde2.typing-break.gschema.xml.in
tools/: Makefile.am  gde2-color-select.c  gde2-color-select.desktop.in.in  mpaste
